objects/CustomSettingListType1Obj__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>list custom settings</description>
    <fields>
        <fullName>CallAvailableTime__c</fullName>
        <label>CallAvailableTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Custom_Desc_textarea__c</fullName>
        <label>Custom_Desc_textarea</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Info_text__c</fullName>
        <label>Customer_Info_text</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_MobileNumber__c</fullName>
        <label>Customer_MobileNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_Number__c</fullName>
        <label>Customer_Phone_Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DOB_info__c</fullName>
        <label>DOB_!32#$%^&amp;*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnterCurency__c</fullName>
        <label>EnterCurency$22&amp;^@!</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Cost__c</fullName>
        <label>Product_Cost</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website_URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>desc__c</fullName>
        <label>desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAvailable</label>
        <type>Checkbox</type>
    </fields>
    <label>CustomSettingListType1</label>
</CustomObject>